--- a/hello-world/.settings/org.eclipse.wst.common.component
+++ b/hello-world/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="hello_world">
+    <wb-module deploy-name="hello-world">
         <wb-resource deploy-path="/" source-path="/appClientModule" tag="defaultRootSource"/>
-        <property name="java-output-path" value="/hello_world/build/classes"/>
+        <property name="java-output-path" value="/hello-world/build/classes"/>
     </wb-module>
 </project-modules>
